llm模块更新rag索引能力